Add docs on working with Great Expectations for data validation (#5181)
* First draft - just bullets

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Fill up draft a bit more

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Lint

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Add hook example

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Add pipeline example

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Lint

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Add more explaining on how GX works

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Add option to save expectations on file

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Update docs/integrations-and-plugins/great_expectations.md

Co-authored-by: Deepyaman Datta <deepyaman.datta@utexas.edu>
Signed-off-by: L. R. Couto <57910428+lrcouto@users.noreply.github.com>

* Update docs/integrations-and-plugins/great_expectations.md

Co-authored-by: Deepyaman Datta <deepyaman.datta@utexas.edu>
Signed-off-by: L. R. Couto <57910428+lrcouto@users.noreply.github.com>

* Apply some changes to doc wording, hook example

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Change examples to define expectations on their own module

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Add lint to expectations reference

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Minor wording changes

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Make example more explicit

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* Fix markdown issue

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

* More markdown fixes

Signed-off-by: Laura Couto <laurarccouto@gmail.com>

---------

Signed-off-by: Laura Couto <laurarccouto@gmail.com>
Signed-off-by: L. R. Couto <57910428+lrcouto@users.noreply.github.com>
Co-authored-by: Deepyaman Datta <deepyaman.datta@utexas.edu>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -453,6 +453,7 @@ nav:
           - DVC: integrations-and-plugins/dvc.md
           - Delta Lake: integrations-and-plugins/deltalake_versioning.md
           - Iceberg: integrations-and-plugins/iceberg_versioning.md
+          - Great Expectations: integrations-and-plugins/great_expectations.md
           - Pandera: integrations-and-plugins/pandera.md
       - IDE Support:
           - Visual Studio Code: ide/set_up_vscode.md
