--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -21,6 +21,8 @@ exceptions:
   - CLI
   - DataCatalog
   - Data Catalog
+  - Databricks
+  - Databricks Repo
   - Docker
   - Docker Compose
   - Docker Swarm
