More fixes by cursor, checked by me
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -10,6 +10,7 @@ exceptions:
   - Amazon
   - Amazon Web Services
   - API
+  - Astro Cloud
   - AWS Step Functions
   - AWS Systems Manager
   - Azure
@@ -52,6 +53,7 @@ exceptions:
   - Kubernetes Service
   - Lambda
   - Linux
+  - MWAA
   - MySQL
   - Python
   - PySpark
