Update config to support `mkdocstrings-python` 2.0
Added Kedro inventories for mkdocstrings configuration.

Signed-off-by: Deepyaman Datta <deepyaman.datta@utexas.edu>

Signed-off-by: Deepyaman Datta <deepyaman.datta@utexas.edu>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,9 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
+          inventories:
+            - https://docs.kedro.org/en/stable/objects.inv
+            - https://docs.kedro.org/projects/kedro-datasets/en/stable/objects.inv
           paths: [src]
           options:
             show_root_toc_entry: true
@@ -71,9 +74,6 @@ plugins:
               ignore_init_summary: true
               warn_unknown_params: false
               returns_named_value: false
-            import:
-              - https://docs.kedro.org/en/stable/objects.inv
-              - https://docs.kedro.org/projects/kedro-datasets/en/stable/objects.inv
   - llmstxt:
       markdown_description: |
         Kedro is an open-source Python framework for creating reproducible, maintainable, and modular data science code.
