--- a/pyproject.toml
+++ b/pyproject.toml
@@ -251,5 +251,5 @@ known-first-party = ["kedro"]
 
 [tool.mypy]
 ignore_missing_imports = true
-disable_error_code = ['misc']
-exclude = ['^kedro/templates/', '^docs/', '^features/test_starter/']
+disable_error_code = ["misc", "untyped-decorator"]
+exclude = ["^kedro/templates/", "^docs/", "^features/test_starter/"]
