--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -461,6 +461,8 @@ nav:
       - IDE Support:
           - Visual Studio Code: ide/set_up_vscode.md
           - PyCharm: ide/set_up_pycharm.md
+      - Experimental:
+          - Experimental APIs: experimental/index.md
       - About:
         #   - Community:
             #   - Kedro Slack: about/community/slack.md
