(docs): Fix vale warnings (#5225)
* Fix vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale warnings with small rewrites

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix lint

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more Vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix linkcheck

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Apply suggestions from code review

Signed-off-by: Merel Theisen <49397448+merelcht@users.noreply.github.com>

* Some more fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Apply suggestions from code review

Co-authored-by: Ankita Katiyar <110245118+ankatiyar@users.noreply.github.com>
Co-authored-by: rashidakanchwala <37628668+rashidakanchwala@users.noreply.github.com>
Co-authored-by: ElenaKhaustova <157851531+ElenaKhaustova@users.noreply.github.com>
Signed-off-by: Merel Theisen <49397448+merelcht@users.noreply.github.com>

---------

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>
Signed-off-by: Merel Theisen <49397448+merelcht@users.noreply.github.com>
Co-authored-by: Ankita Katiyar <110245118+ankatiyar@users.noreply.github.com>
Co-authored-by: rashidakanchwala <37628668+rashidakanchwala@users.noreply.github.com>
Co-authored-by: ElenaKhaustova <157851531+ElenaKhaustova@users.noreply.github.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -9,6 +9,7 @@ exceptions:
   - Airflow
   - Amazon
   - Amazon Web Services
+  - API
   - AWS Step Functions
   - AWS Systems Manager
   - Azure
@@ -17,6 +18,7 @@ exceptions:
   - Azure Blob Storage
   - Azure Event Hub
   - CI/CD
+  - CLI
   - DataCatalog
   - Data Catalog
   - Docker
@@ -32,7 +34,9 @@ exceptions:
   - GraphQL
   - Hook
   - Hooks
+  - Iceberg
   - IDs
+  - IO
   - Jenkins
   - JFrog
   - JFrog Artifactory
@@ -51,6 +55,7 @@ exceptions:
   - Red Hat
   - Redis
   - Slack
+  - Technical Steering Committee
   - Ubuntu
   - Unix
   - URLs
