Final round of fixes
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -40,6 +40,7 @@ exceptions:
   - GraphQL
   - Hook
   - Hooks
+  - IAM
   - Iceberg
   - IDs
   - IO
@@ -56,6 +57,7 @@ exceptions:
   - Linux
   - MWAA
   - MySQL
+  - Prefect
   - Python
   - PySpark
   - QuantumBlack
@@ -67,4 +69,5 @@ exceptions:
   - Ubuntu
   - Unix
   - URLs
+  - VertexAI
   - YAML
