Address Vale warnings with Cursor
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -10,6 +10,7 @@ exceptions:
   - Amazon
   - Amazon Web Services
   - API
+  - Argo Workflows
   - Astro Cloud
   - AWS Batch
   - AWS Step Functions
