Don't run Vale on API docs
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.vale.ini
+++ b/.vale.ini
@@ -5,3 +5,6 @@ MinAlertLevel = suggestion
 [*.md]
 BasedOnStyles = Vale, Kedro
 Vale.Spelling = NO
+
+[docs/api/*.md] # ignore since the api files require certain formatting
+BasedOnStyles =
