Ignore non docs markdown files
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.vale.ini
+++ b/.vale.ini
@@ -8,3 +8,6 @@ Vale.Spelling = NO
 
 [docs/api/*.md] # ignore since the api files require certain formatting
 BasedOnStyles =
+
+[.github/*.md, README.md, CONTRIBUTING.md, SECURITY.md, CODE_OF_CONDUCT.md]
+BasedOnStyles =
