--- a/.vale.ini
+++ b/.vale.ini
@@ -9,5 +9,5 @@ Vale.Spelling = NO
 [docs/api/*.md] # ignore since the api files require certain formatting
 BasedOnStyles =
 
-[.github/*.md, README.md, CONTRIBUTING.md, SECURITY.md, CODE_OF_CONDUCT.md]
+[.github/*.md]
 BasedOnStyles =
