Ignore non docs md from Vale scanning
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.vale.ini
+++ b/.vale.ini
@@ -11,3 +11,15 @@ BasedOnStyles =
 
 [.github/*.md]
 BasedOnStyles =
+
+[README.md]
+BasedOnStyles =
+
+[CONTRIBUTING.md]
+BasedOnStyles =
+
+[SECURITY.md]
+BasedOnStyles =
+
+[CODE_OF_CONDUCT.md]
+BasedOnStyles =
