--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -249,13 +249,11 @@ plugins:
           - ide/set_up_vscode.md: Visual Studio Code setup for Kedro
           - ide/set_up_pycharm.md: PyCharm setup for Kedro
 
-        Experimental APIs:
-          - experimental/index.md: Experimental APIs
-
         About Kedro:
           - about/technical_steering_committee.md: Kedro's Technical Steering Committee
           - about/migration.md: Migration guide between Kedro versions
           - about/telemetry.md: Understanding Kedro telemetry
+          - about/experimental.md: Experimental APIs in Kedro
 
 markdown_extensions:
   - attr_list
@@ -443,7 +441,6 @@ nav:
                   - ThreadRunner: api/runner/kedro.runner.ThreadRunner.md
               - kedro.utils: api/kedro.utils.md
               - kedro.load_ipython_extension: api/kedro.load_ipython_extension.md
-              - kedro.experimental: api/kedro.experimental.md
               - kedro.KedroDeprecationWarning: api/kedro.KedroDeprecationWarning.md
               - kedro.KedroPythonVersionWarning: api/kedro.KedroPythonVersionWarning.md
           - Kedro CLI: getting-started/commands_reference.md
@@ -470,6 +467,8 @@ nav:
             #   - Kedro Wizard: about/community/wizard.md
           - Contributing:
               - Kedro's Technical Steering Committee: about/technical_steering_committee.md
+          - Experimental:
+              - Experimental APIs in Kedro: about/experimental.md
             #   - Kedro Maintainer: about/contributing/maintainer.md
             #   - Contributing on GitHub: about/contributing/github.md
             #   - Contributing documentation: about/contributing/documentation.md
