(docs): Address more Vale warnings (#5251)
* Fix vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale warnings with small rewrites

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix lint

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more Vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix linkcheck

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Apply suggestions from code review

Signed-off-by: Merel Theisen <49397448+merelcht@users.noreply.github.com>

* Some more fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Manual Vale fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix Vale warnings Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Vale fixes done by Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Additional fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* More fixes by cursor, checked by me

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* More fixes by cursor, checked by me

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale issues with Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Final round of fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* One more fix

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Ignore non docs markdown files

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Does it need to be file per file?

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Ignore non docs md from Vale scanning

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Also ignore RELEASE.md from Vale scanning

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

---------


--- a/.vale.ini
+++ b/.vale.ini
@@ -8,3 +8,21 @@ Vale.Spelling = NO
 
 [docs/api/*.md] # ignore since the api files require certain formatting
 BasedOnStyles =
+
+[.github/*.md]
+BasedOnStyles =
+
+[README.md]
+BasedOnStyles =
+
+[CONTRIBUTING.md]
+BasedOnStyles =
+
+[SECURITY.md]
+BasedOnStyles =
+
+[CODE_OF_CONDUCT.md]
+BasedOnStyles =
+
+[RELEASE.md]
+BasedOnStyles =
