--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -10,6 +10,8 @@ exceptions:
   - Amazon
   - Amazon Web Services
   - API
+  - Astro Cloud
+  - AWS Batch
   - AWS Step Functions
   - AWS Systems Manager
   - Azure
@@ -21,19 +23,24 @@ exceptions:
   - CLI
   - DataCatalog
   - Data Catalog
+  - Databricks
+  - Databricks Repo
   - Docker
   - Docker Compose
   - Docker Swarm
   - Dockerfile
+  - Excel
   - GitHub
   - GitHub Actions
   - Google
   - Google Analytics
   - Google Cloud
   - Google Cloud Functions
+  - Google Cloud Storage
   - GraphQL
   - Hook
   - Hooks
+  - IAM
   - Iceberg
   - IDs
   - IO
@@ -48,14 +55,20 @@ exceptions:
   - Kubernetes Service
   - Lambda
   - Linux
+  - MWAA
   - MySQL
+  - Prefect
   - Python
+  - PySpark
   - QuantumBlack
   - QuantumBlack Labs
   - Red Hat
   - Redis
+  - SageMaker
   - Slack
   - Technical Steering Committee
   - Ubuntu
   - Unix
   - URLs
+  - VertexAI
+  - YAML
