--- a/kedro/templates/project/{{ cookiecutter.repo_name }}/conf/logging.yml
+++ b/kedro/templates/project/{{ cookiecutter.repo_name }}/conf/logging.yml
@@ -1,5 +1,5 @@
 # To enable this custom logging configuration, set KEDRO_LOGGING_CONFIG to the path of this file.
-# More information available at https://docs.kedro.org/en/stable/logging/logging.html
+# More information available at https://docs.kedro.org/en/stable/develop/logging/#how-to-customise-kedro-logging
 version: 1
 
 disable_existing_loggers: False
@@ -29,7 +29,7 @@ handlers:
     class: kedro.logging.RichHandler
     rich_tracebacks: True
     # Advance options for customisation.
-    # See https://docs.kedro.org/en/stable/logging/logging.html#project-side-logging-configuration
+    # See https://docs.kedro.org/en/stable/develop/logging/#advanced-logging
     # tracebacks_show_locals: False
 
 loggers:
