--- a/.github/workflows/benchmark-performance.yml
+++ b/.github/workflows/benchmark-performance.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           path: "kedro"
+          fetch-depth: 0  # Fetch full history for ASV to access main branch
 
       - name: Set up Python
         uses: actions/setup-python@v6
