Fix more vale warnings in the tutorial docs
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -46,11 +46,13 @@ exceptions:
   - Iceberg
   - IDs
   - IO
+  - IPython
   - Jenkins
   - JFrog
   - JFrog Artifactory
   - Jira
   - Jupyter Notebook
+  - JupyterLab
   - Kafka
   - Kubeflow
   - Kubeflow Pipelines
