--- a/.lycheeignore
+++ b/.lycheeignore
@@ -1,8 +1,6 @@
 # .lycheeignore: URLs and patterns to skip during lychee link checking
 # For details: https://github.com/lycheeverse/lychee#ignoring-links
 # Common: docs.kedro.org, localhost, GitHub users/orgs (rate limits)
-https://docs.kedro.org/
-https://docs.kedro.org/*
 http://127.0.0.1:8000/
 http://127.0.0.1:8000/*
 http://127.0.0.1:8787/
@@ -39,3 +37,12 @@ https://github.com/kedro-org
 https://github.com/gbraccialli-qb
 https://github.com/bruceaphilp
 https://github.com/kedro-plugins
+file://*
+github.com/*
+pypi.org/*
+http://localhost/
+http://127.0.0.1/
+http://127.0.0.1/*
+example.com/*
+test.com/*
+fake*
