(docs): Fix `Vale` warnings for deployment docs (#5257)
* Fix vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale warnings with small rewrites

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix lint

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix more Vale warnings

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix linkcheck

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Apply suggestions from code review

Signed-off-by: Merel Theisen <49397448+merelcht@users.noreply.github.com>

* Some more fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Manual Vale fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Fix Vale warnings Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Vale fixes done by Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Additional fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* More fixes by cursor, checked by me

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* More fixes by cursor, checked by me

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale issues with Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Final round of fixes

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* One more fix

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address Vale warnings with Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Address more value issues in the deploy docs with Cursor

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Ignore non docs markdown files

Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

* Does it need to be file per file?

Signed-off-by: Merel Theisen <merel.theisen@quant

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -10,6 +10,7 @@ exceptions:
   - Amazon
   - Amazon Web Services
   - API
+  - Argo Workflows
   - Astro Cloud
   - AWS Batch
   - AWS Step Functions
@@ -29,6 +30,7 @@ exceptions:
   - Docker Compose
   - Docker Swarm
   - Dockerfile
+  - EMR Serverless
   - Excel
   - GitHub
   - GitHub Actions
@@ -49,6 +51,8 @@ exceptions:
   - JFrog Artifactory
   - Jira
   - Kafka
+  - Kubeflow
+  - Kubeflow Pipelines
   - Kubernetes
   - Kubernetes Engine
   - Kubernetes Pod
