Fix Vale warnings in about and ide docs
Signed-off-by: Merel Theisen <merel.theisen@quantumblack.com>

--- a/.github/styles/Kedro/headings.yml
+++ b/.github/styles/Kedro/headings.yml
@@ -70,6 +70,7 @@ exceptions:
   - MySQL
   - Notebooks
   - Prefect
+  - PyCharm
   - Python
   - PySpark
   - QuantumBlack
@@ -85,3 +86,5 @@ exceptions:
   - URLs
   - VertexAI
   - YAML
+  - VS Code
+  - Visual Studio Code
