--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -479,6 +479,7 @@ not_in_nav: |
   diagrams/
   readme.md
   integrations-and-plugins/marimo.md
+  legal/cookie_policy.md
 
 validation:
   omitted_files: warn
