move cookie policy
Signed-off-by: rashidakanchwala <rashida_kanchwala@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -472,6 +472,8 @@ nav:
         #   - Release notes: about/release_notes.md
           - Migration guide: about/migration.md
           - Kedro telemetry: about/telemetry.md
+          - Legal:
+              - Cookie Policy: legal/cookie_policy.md
   - Kedro-Viz: https://docs.kedro.org/projects/kedro-viz/en/stable/
   - Kedro-Datasets: https://docs.kedro.org/projects/kedro-datasets/en/stable/
 
@@ -479,7 +481,6 @@ not_in_nav: |
   diagrams/
   readme.md
   integrations-and-plugins/marimo.md
-  legal/cookie_policy.md
 
 validation:
   omitted_files: warn
