--- a/.vale.ini
+++ b/.vale.ini
@@ -26,3 +26,12 @@ BasedOnStyles =
 
 [RELEASE.md]
 BasedOnStyles =
+
+[LICENSE.md]
+BasedOnStyles =
+
+[features/*.md]
+BasedOnStyles =
+
+[kedro/templates/*.md]
+BasedOnStyles =
