--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires-python = ">=3.10"
 dependencies = [
     "attrs>=21.3",
     "build>=0.7.0",
-    "cachetools>=4.1,<7.0",
+    "cachetools>=4.1,<7.0", # Pinned because cachetools 7 breaks Kedro multiprocessing
     "click>=8.2",
     "cookiecutter>=2.1.1,<3.0",
     "dynaconf>=3.1.2,<4.0",
