add locks and temp CI test
Signed-off-by: rashidakanchwala <rashida_kanchwala@mckinsey.com>

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -33,6 +33,7 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
+          uv pip install "git+https://github.com/kedro-org/kedro-plugins.git@fix/remove-cachetools-deps#subdirectory=kedro-datasets"
           make install-test-requirements
           uv pip install pip
           make install-pre-commit
