--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,6 +30,7 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
+            uv pip install "git+https://github.com/kedro-org/kedro-plugins.git@fix/remove-cachetools-deps#subdirectory=kedro-datasets"
             make install-test-requirements
             make install-pre-commit
       - name: pip freeze
