Try modify starter
Signed-off-by: Ankita Katiyar <ankitakatiyar2401@gmail.com>

--- a/kedro/templates/project/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
+++ b/kedro/templates/project/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
@@ -2,3 +2,7 @@
 #
 # Documentation for this file format can be found in "The Data Catalog"
 # Link: https://docs.kedro.org/en/stable/catalog-data/introduction/#data-catalog
+
+hello:
+  type: pandas.CSVDataset
+  filepath: data/01_raw/blah.csv
