--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,11 @@ jupyter = [
 benchmark = [
     "asv"
 ]
-all = [ "kedro[test,docs,jupyter,benchmark]" ]
+server = [
+    "fastapi>=0.100.0",
+    "uvicorn>=0.20.0",
+]
+all = [ "kedro[test,docs,jupyter,benchmark,server]" ]
 
 [project.urls]
 Homepage = "https://kedro.org"
