Remove `cachetools` dependency (#5352)
Cachetools 7 introduced several breaking changes that made @cachedmethod significantly stricter, including converting it into a descriptor and requiring instances to have a mutable __dict__.
These assumptions do not align well with Kedro’s ParallelRunner, which relies on pickling and unpickling dataset instances across processes, and this resulted in runtime failures when upgrading to cachetools 7. Although pinning the dependency avoided the immediate issue, further investigation showed that cachetools is not well-suited to this use case. Kedro only caches two values per dataset instance (the resolved load and save versions) and does not require eviction policies, TTLs, or multi-key caching.

As a long-term solution, this change removes the cachetools dependency and replaces it with lightweight manual caching. This simplifies the implementation, removes an unnecessary dependency, and avoids future breakages in parallel execution.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -33,6 +33,8 @@ jobs:
           activate-environment: true
       - name: Install dependencies
         run: |
+          # TEMP: For passing tests, will be removed before merge
+          uv pip install "git+https://github.com/kedro-org/kedro-plugins.git@fix/remove-cachetools-deps#subdirectory=kedro-datasets"
           make install-test-requirements
           uv pip install pip
           make install-pre-commit
