--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ test = [
     "jupyter~=1.0",
     "kedro-datasets",
     "mypy~=1.0",
-    "pandas~=2.0",
+    "pandas>=2.0,<4.0",
     "pluggy>=1.0",
     "pre-commit>=2.9.2,<5.0",  # The hook `mypy` requires pre-commit version 2.9.2.
     "pytest-cov>=3,<8",
