--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,6 +33,6 @@ jobs:
             make install-test-requirements
             make install-pre-commit
       - name: pip freeze
-        run: uv pip freeze --system
+        run: uv pip freeze
       - name: Run unit tests
         run: make test
