--- a/.github/workflows/detect-secrets.yml
+++ b/.github/workflows/detect-secrets.yml
@@ -32,6 +32,6 @@ jobs:
           make install-test-requirements
           make install-pre-commit
       - name: pip freeze
-        run: uv pip freeze --system
+        run: uv pip freeze
       - name: Scan all tracked files
         run: git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline
