--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,6 @@ jobs:
             make install-test-requirements
             make install-pre-commit
       - name: pip freeze
-        run: uv pip freeze --system
+        run: uv pip freeze
       - name: Run linter
         run: make lint
