--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dynamic = ["readme", "version"]
 [project.optional-dependencies]
 test = [
     "behave>=1.2.6,<2.0",
+    "chardet<6",  # Temporary: remove once requests supports chardet 6 (causes RequestsDependencyWarning)
     "coverage[toml]",
     "detect-secrets~=1.5.0",
     "import-linter>=2.5.2,<3.0",
